# numta

./: .gitignore  ACCURACY.md  FUNCTION_IMPLEMENTATIONS.md  GPU_IMPLEMENTATION_STATUS.md  OPTIMIZATION.md  PERFORMANCE.md  PORTABILITY.md  README.md  REFACTORING_SUMMARY.md  RELEASING.md  accuracy_math_operators.py  add_gpu_momentum.py  benchmark_comparison.py  benchmark_price_transform.py  benchmark_statistic_functions.py  implementation_status.md  mkdocs.yml  pyproject.toml  ta-lib_functions.txt  test_gpu_momentum.py  test_new_indicators.py  update_init.py
.github/workflows/: docs.yml  publish-to-pypi.yml  test.yml
development/: ACCURACY.md  README.md  accuracy_comparison.py  accuracy_overlap.py  accuracy_price_transform.py  accuracy_statistic_functions.py  benchmark_comparison.py  benchmark_math_operators.py  benchmark_overlap.py  benchmark_price_transform.py  benchmark_statistic_functions.py  ta-lib_functions.txt
docs/: accuracy.md  index.md  performance.md
docs/api/: batch.md  cycle.md  index.md  math.md  momentum.md  overlap.md  pandas.md  patterns.md  price_transform.md  statistics.md  streaming.md  volatility.md  volume.md
docs/examples/: basic_usage.md
docs/getting-started/: installation.md  quickstart.md
examples/: benchmark_optimized.py  benchmark_sma.py
notebooks/: 01_getting_started.ipynb  02_technical_indicators.ipynb  03_candlestick_patterns.ipynb  04_chart_patterns.ipynb  05_harmonic_patterns.ipynb  06_streaming_indicators.ipynb  07_visualization.ipynb  08_performance_optimization.ipynb
src/numta/: __init__.py  backend.py  benchmark.py  optimized.py  pandas_ext.py
src/numta/api/: __init__.py  batch.py  cycle_indicators.py  math_operators.py  momentum_indicators.py  overlap.py  pattern_recognition.py  price_transform.py  statistic_functions.py  statistics.py  volatility_indicators.py  volume_indicators.py
src/numta/cpu/: __init__.py  momentum_indicators.py  overlap.py  price_transform.py  statistic_functions.py  statistics.py
src/numta/gpu/: __init__.py  cycle_indicators.py  math_operators.py  memory.py  momentum_indicators.py  overlap.py  pattern_recognition.py  price_transform.py  statistic_functions.py  statistics.py  volatility_indicators.py  volume_indicators.py
src/numta/patterns/: __init__.py  chart_patterns.py  harmonic_patterns.py  swing.py  utils.py
src/numta/streaming/: __init__.py  base.py  momentum.py  overlap.py  volatility.py  volume.py
src/numta/viz/: __init__.py  chart.py  lwcharts_adapter.py  pattern_markers.py  streaming_chart.py
src/talib_pure/: __init__.py  backend.py  benchmark.py  cycle_indicators.py  math_operators.py  momentum_indicators.py  optimized.py  overlap.py  overlap.py.backup  pattern_recognition.py  price_transform.py  statistic_functions.py  statistics.py  volatility_indicators.py  volume_indicators.py
src/talib_pure/api/: __init__.py  math_operators.py  momentum_indicators.py  overlap.py  pattern_recognition.py  price_transform.py  statistic_functions.py  statistics.py  volatility_indicators.py  volume_indicators.py
src/talib_pure/cpu/: cycle_indicators.py  math_operators.py  momentum_indicators.py  overlap.py  price_transform.py  (+4 more)
tests/: benchmark_ad.py  benchmark_adosc.py  benchmark_adx.py  benchmark_adxr.py  benchmark_cdl_rickshawman.py  benchmark_cdl_risefall3methods.py  benchmark_cdl_separatinglines.py  benchmark_cdl_shootingstar.py  benchmark_cdl_shortline.py  benchmark_cdl_spinningtop.py  benchmark_cdl_stalledpattern.py  benchmark_cdl_sticksandwich.py  benchmark_cdl_takuri.py  benchmark_cdl_tasukigap.py  benchmark_cdl_thrusting.py  benchmark_cdl_tristar.py  benchmark_cdl_unique3river.py  benchmark_cdl_upsidegap2crows.py  benchmark_cdl_xsidegap3methods.py  benchmark_correl.py  benchmark_dema.py  benchmark_ema.py  benchmark_ht_dcperiod.py  benchmark_ht_dcphase.py  benchmark_ht_phasor.py  benchmark_ht_sine.py  benchmark_ht_trendline.py  benchmark_ht_trendmode.py  benchmark_kama.py  benchmark_linearreg.py  benchmark_linearreg_angle.py  benchmark_linearreg_intercept.py  benchmark_linearreg_slope.py  benchmark_ma.py  benchmark_mama.py  benchmark_max.py  benchmark_maxindex.py  benchmark_medprice.py  benchmark_midpoint.py  benchmark_midprice.py  (+98 more)
tests/accuracy/: __init__.py  accuracy_comparison.py  accuracy_math_operators.py  accuracy_overlap.py  accuracy_price_transform.py  accuracy_statistic_functions.py  test_accuracy.py
tests/benchmark/: benchmark_cdl_rickshawman.py  benchmark_cdl_separatinglines.py  benchmark_cdl_shortline.py  benchmark_cdl_spinningtop.py  benchmark_cdl_stalledpattern.py  benchmark_cdl_sticksandwich.py  benchmark_cdl_thrusting.py  benchmark_cdl_tristar.py  benchmark_cdl_unique3river.py  benchmark_cdl_upsidegap2crows.py  benchmark_comparison.py  benchmark_dema.py  benchmark_ema.py  benchmark_ht_dcperiod.py  benchmark_ht_dcphase.py  benchmark_ht_sine.py  benchmark_ht_trendline.py  benchmark_linearreg.py  benchmark_linearreg_angle.py  benchmark_linearreg_intercept.py  benchmark_linearreg_slope.py  benchmark_mama.py  benchmark_math_operators.py  benchmark_medprice.py  benchmark_midpoint.py  benchmark_min.py  benchmark_minindex.py  benchmark_minmaxindex.py  benchmark_natr.py  benchmark_overlap.py  benchmark_price_transform.py  benchmark_runner.py  benchmark_sar.py  benchmark_statistic_functions.py  benchmark_stddev.py  benchmark_stoch.py  benchmark_stochf.py  benchmark_sum.py  benchmark_t3.py  benchmark_trima.py  (+3 more)
tests/unit/: __init__.py  test_all_functions.py  test_cdl_rickshawman.py  test_cdl_risefall3methods.py  test_cdl_shootingstar.py  test_cdl_tasukigap.py  test_cdl_tristar.py  test_cdl_xsidegap3methods.py  test_correl.py  test_dema.py  test_gpu_momentum_batch.py  test_gpu_overlap_batch.py  test_gpu_patterns_batch.py  test_gpu_remaining_batch.py  test_ht_dcperiod.py  test_ht_dcphase.py  test_ht_phasor.py  test_ht_sine.py  test_ht_trendline.py  test_linearreg_angle.py  test_linearreg_intercept.py  test_linearreg_slope.py  test_mama.py  test_medprice.py  test_minmaxindex.py  test_new_patterns.py  test_obv.py  test_sar.py  test_sma.py  test_t3.py  test_tema.py  test_wclprice.py
(+11 files in other folders)
