[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numta"
dynamic = ["version"]
description = "NumPy-based Technical Analysis library with focus on performance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "numta contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
    "numba>=0.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "pandas>=1.3.0",
]
pandas = [
    "pandas>=1.3.0",
]
comparison = [
    "TA-Lib>=0.4.0",  # For comparison with original TA-Lib (requires C library)
]
numba = [
    "numba>=0.56.0",  # JIT compilation for faster execution
]
viz = [
    "pandas>=1.3.0",
    "lwcharts>=0.1.0",
]
patterns = [
    "pandas>=1.3.0",
]
streaming = [
    # No additional dependencies for streaming indicators
]
full = [
    "pandas>=1.3.0",
    "lwcharts>=0.1.0",
    "numba>=0.56.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/deepentropy/numta"
Repository = "https://github.com/deepentropy/numta"
Issues = "https://github.com/deepentropy/numta/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/numta/_version.py"
fallback_version = "0.0.0+unknown"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "numba: marks tests requiring numba",
    "pandas: marks tests requiring pandas",
    "talib: marks tests requiring TA-Lib",
    "pandas_ta: marks tests requiring pandas-ta",
    "slow: marks tests as slow",
    "benchmark: marks tests as benchmark tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/numta"]
branch = true
omit = [
    "*/tests/*",
    "*/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
